--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Fasthand&family=Space+Grotesk:wght@300;400;500;600;700&family=Work+Sans:ital,wght@0,100;0,300;1,300&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'cursive','Space Grotesk', sans-serif,'Work Sans';
+  font-size: 50px;
+}
+
+p {
+  text-align: center;
+}
+
+.container {
+  background-image: url(https://res.cloudinary.com/dj8xxfwoz/image/upload/v1684963796/photo-1684861719108-23f67fb11c1f_d1p4ab.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 50px;
+  font-family: 'cursive','Space Grotesk', sans-serif,'Work Sans';
+}
