--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,28 @@
 }
 
 h1 {
-  text-align: center;
+  text-align: justify;
+  margin-left: 100px;
   font-family: 'cursive','Space Grotesk', sans-serif,'Work Sans';
   font-size: 50px;
+  padding-top: 70px;
 }
 
 p {
-  text-align: center;
+  text-align: justify;
+  margin-left: 100px;
+  padding-bottom: -50px;
 }
 
 .container {
   background-image: url(https://res.cloudinary.com/dj8xxfwoz/image/upload/v1684963796/photo-1684861719108-23f67fb11c1f_d1p4ab.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 50px;
   font-family: 'cursive','Space Grotesk', sans-serif,'Work Sans';
+  margin-top: 50px;
+  height: 500px
+}
+
+#star {
+  color: rgb(255, 215, 0);
 }
